# Screeny

./: .gitignore  README.md  meson.build
data/: com.github.siigdev.screeny.AppData.xml  com.github.siigdev.screeny.desktop  com.github.siigdev.screeny.gschema.xml  stylesheet.css
src/: Application.vala  MainWindow.vala  Screeny.vala
src/widgets/: SaveDialog.vala
